# Tallis

./: .gitignore  README.md  TODO  autogen.sh  configure.ac
src/: Makefile.am  conf.c  conf.h  config.c  config.h  error.c  error.h  irc.c  irc.h  lexer.c  lexer.h  net.c  net.h  parser.c  parser.h  tallis.c  tallis.h
